syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "AbilityInvokeEntry.proto";

// Name: KPHEJCEMNIM
// CmdId: 1175
message AbilityInvocationsNotify {
    repeated AbilityInvokeEntry invokes = 12;
}

