syntax = "proto3";

option csharp_namespace = "Common.Protobuf";

import "UnionCmd.proto";

// Name: JHIIPBFFOAN
// CmdId: 27
message UnionCmdNotify {
    repeated UnionCmd cmd_list = 15;
}

